
Mon Jul  9 16:49:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in: modify RM macro.
	
	* lib/mkmf.rb: ditto.

Sun Jul  8 20:54:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.h: fix a wrong function name: rb_iglob() -> rb_globi().

Sun Jul  8 16:05:36 2001  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb (ProtoSocket#read): modify typo.

Fri Jul  6 15:11:38 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb: merge from 1.7: do not delete a used tempfile
	  from children processes.

	* lib/tempfile.rb: merge from 1.7: do not change the umask so as
	  not to affect other threads' file creation.  specify a file mode
	  (0600) when creating a tempfile instead.

Fri Jul  6 00:49:05 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/readline/readline.c (readline_event): merge from 1.7: a
	  non-void function should return a value.

	* ext/readline/readline.c: merge from 1.7: add new methods:
	  Readline::completion_append_character and
	  Readline::completion_append_character=.

	* ext/readline/README, ext/readline/README.jp: merge from 1.7: add
	  an English version of the document.

Thu Jul  5 22:53:27 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_f_require): move rb_file_s_expand_path from
	  rb_find_file_noext().

	* file.c (rb_find_file_noext): move rb_file_s_expand_path to
	  rb_f_require(). 

Thu Jul  5 20:28:53 2001  Tietew <tietew@tietew.net>

	* string.c (rb_str_each_line): should propagate taint mark. 

	* ext/nkf/nkf.c (rb_nkf_kconv): ditto.

Thu Jul  5 13:44:03 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (load_file): local variables 'c' remain uninitialized on
	  xflag.

Thu Jul  5 10:00:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_match): prefetched escaped character too early.

Wed Jul  4 08:58:30 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): add argument check for attr_readers.

Wed Jul  4 00:12:37 2001  Akinori MUSHA  <knu@iDaemons.org>