@@ -970,7 +970,7 @@ EOF
 	echo ${UNAME_MACHINE}-apple-rhapsody${UNAME_RELEASE}
 	exit 0 ;;
     *:Darwin:*:*)
-	echo `uname -p`-apple-darwin${UNAME_RELEASE}
+      echo `uname -p`-apple-darwin${UNAME_RELEASE} | sed -e 's/\([1-9][0-9]*\.[0-9][0-9]*\)\..*$/\1/'
 	exit 0 ;;
 esac
 
