@@ -574,6 +574,7 @@ new_blktag()
     _block.vmode = scope_vmode;		\
     _block.flags = BLOCK_D_SCOPE;	\
     _block.dyna_vars = ruby_dyna_vars;	\
+    _block.wrapper = ruby_wrapper;	\
     ruby_block = &_block;
 
 #define POP_BLOCK_TAG(tag) do {		\
@@ -3511,8 +3512,9 @@ rb_yield_0(val, self, klass, acheck)
     NODE *node;
     volatile VALUE result = Qnil;
     volatile VALUE old_cref;
-    struct BLOCK *block;
-    struct SCOPE *old_scope;
+    volatile VALUE old_wrapper;
+    struct BLOCK * volatile block;
+    struct SCOPE * volatile old_scope;
     struct FRAME frame;
     int state;
     static unsigned serial = 1;
@@ -3529,6 +3531,8 @@ rb_yield_0(val, self, klass, acheck)
     ruby_frame = &(frame);
     old_cref = (VALUE)ruby_cref;
     ruby_cref = (NODE*)ruby_frame->cbase;
+    old_wrapper = ruby_wrapper;
+    ruby_wrapper = block->wrapper;
     old_scope = ruby_scope;
     ruby_scope = block->scope;
     ruby_block = block->prev;
@@ -3654,6 +3658,7 @@ rb_yield_0(val, self, klass, acheck)
     ruby_block = block;
     ruby_frame = ruby_frame->prev;
     ruby_cref = (NODE*)old_cref;
+    ruby_wrapper = old_wrapper;
     if (ruby_scope->flag & SCOPE_DONT_RECYCLE)
        scope_dup(old_scope);
     ruby_scope = old_scope;
@@ -6334,7 +6339,6 @@ proc_call(proc, args)
     orphan = blk_orphan(data);
 
     ruby_wrapper = data->wrapper;
-
     /* PUSH BLOCK from data */
     old_block = ruby_block;
     _block = *data;
@@ -6455,7 +6459,6 @@ block_pass(self, node)
     int state;
     volatile int orphan;
     volatile int safe = ruby_safe_level;
-    volatile VALUE old_wrapper = ruby_wrapper;
 
     if (NIL_P(block)) {
 	return rb_eval(self, node->nd_iter);
@@ -6470,8 +6473,6 @@ block_pass(self, node)
 
     Data_Get_Struct(block, struct BLOCK, data);
     orphan = blk_orphan(data);
-
-    ruby_wrapper = data->wrapper;
 
     /* PUSH BLOCK from data */
     old_block = ruby_block;
@@ -6510,7 +6511,6 @@ block_pass(self, node)
 	}
     }
     ruby_block = old_block;
-    ruby_wrapper = old_wrapper;
     ruby_safe_level = safe;
 
     switch (state) {/* escape from orphan procedure */
