@@ -216,6 +216,8 @@ rb_str_dup(str)
 	str2 = rb_str_new3(rb_str_new4(str));
     }
     OBJ_INFECT(str2, str);
+    if (FL_TEST(str, FL_EXIVAR))
+	rb_clone_generic_ivar(str2, str);
     RBASIC(str2)->klass = klass;
     return str2;
 }
