@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-07-12"
+#define RUBY_RELEASE_DATE "2001-07-13"
 #define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010712
+#define RUBY_RELEASE_CODE 20010713
